RIA-7842 Fix for new text to only show on list assist hearings (#1728)
* Clean DecideAnApplicationConfirmation

* Made 7842 changes, make sure correct link to events and add tests

* Fix indentation

* Fix enum valueOf not evaluating to the correct enum and add tests.

* Code works

* Cleanup

* RIA-7842. Only show new success text when list assist hearings event.